--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.md linguist-documentation=false linguist-detectable=true
+* linguist-documentation=false linguist-detectable=true
+*.html linguist-detectable=false
+*.txt linguist-detectable=false
