--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-* linguist-documentation=false linguist-detectable=true
+*.md linguist-documentation=false linguist-detectable=true
 *.html linguist-detectable=true
 *.txt linguist-detectable=true
