--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.md linguist-documentation=false linguist-detectable=true
-*.html linguist-detectable=false
-*.txt linguist-detectable=false
+*.html linguist-documentation=true linguist-detectable=false
+*.txt linguist-documentation=true linguist-detectable=false
